vbnc/vbnc/tests/Errors/Classonnewline.vb
Module Classonnewline
    Class

    Foo

    End Class
End Module
